# curlplusplus

./: CMakeLists.txt  README.md  TODO.md  makefile
example/: 10-at-a-time.cc  CMakeLists.txt  debug.cc  getinfo.cc  shared-connection-cache.cc  simple.cc  time.cc  url2file.cc  use_test.cpp
include/: CMakeLists.txt
include/curl++/: buffer.hpp  callback_wrapper.hpp  easy.hpp  easy_event.hpp  easy_events.hpp  easy_handle.hpp  easy_info.hpp  easy_opt.hpp  easy_ref.hpp  extract_function.hpp  global.hpp  handle_base.hpp  info.hpp  info_read.hpp  invoke.hpp  multi.hpp  multi_events.hpp  multi_handle.hpp  multi_opt.hpp  multi_ref.hpp  option.hpp  share.hpp  share_events.hpp  translate_type.hpp  types.hpp  util.hpp
include/curl++/detail/: easy_events.hpp  extract_function.hpp  invoke.hpp  is_detected.hpp  multi_events.hpp  translate_type.hpp
src/: CMakeLists.txt  easy.cpp  easy_event.cpp  easy_events.cpp  easy_handle.cpp  easy_info.cpp  easy_opt.cpp  easy_ref.cpp  global.cpp  multi.cpp  multi_events.cpp  multi_handle.cpp  multi_opt.cpp  multi_ref.cpp  option.cpp  private_t.hpp  share.cpp  types.cpp  util.cpp
